# icalendar-events-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  icalendar-events-cli.py  pyproject.toml  requirements.txt  setup-venv.sh
.github/workflows/: python-pdm.yml  release.yml
docs/: index.md
src/icalendar_events_cli/: __main__.py  argparse.py  downloader.py  icalendar.py  output.py
tests/: __init__.py  test_general.py  test_query.py  util_runner.py
tests/calendar_examples/: GermanHolidays.json
tests/ics_examples/: GermanHolidays.ics  other_examples.ics  recurring_events.ics
