[project]
name = "icalendar-events-cli"
dynamic = ["version"]
description = "Command-line tool to read and filter events from iCalendar (RFC 5545) or jCal (RFC 7265) calendars"
authors = [{ name = "Sebastian Waldvogel", email = "sebastian@waldvogels.de" }]
license = { text = "MIT" }
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "tzlocal==5.3.1",
    "pytz==2026.1.post1",
    "icalendar==7.0.3",
    "recurring-ical-events==3.8.1",
    "requests==2.33.1",
    "requests-file==3.0.1",
    "jsonargparse==4.42.0",
    "rich-argparse==1.7.2",
    "pydantic==2.12.5",
]

[project.scripts]
icalendar-events-cli = "icalendar_events_cli.__main__:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
lint = [
    "ruff==0.15.12",
]
pytest = [
    "pytest-cov==7.1.0",
    "pytest-httpserver==1.1.5",
]

[project.urls]
Repository = "https://github.com/waldbaer/icalendar-events-cli"

# ---- Python PDM ------------------------------------------------------------------------------------------------------

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
lint = "ruff check ."
format = "ruff format ."
tests = "pytest --cov-report term-missing --cov=icalendar_events_cli --cov-fail-under=100 --verbose"

# ---- Ruff ------------------------------------------------------------------------------------------------------------

[tool.ruff]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]
line-length = 120

[tool.ruff.lint]
select = [
    "ARG",
    "ANN", # Warnings for missing type annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # Missing docstrings (autodoc)
    "DOC", # pydoclint
    "E",   # pycodestyle - Error
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle - Warning
    "UP",  # pyupgrade
    #"PL", # Pylint
]
extend-select = ["DOC"]
preview = true
ignore = ["UP006", "UP035"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC2701"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---- pylint ----------------------------------------------------------------------------------------------------------

[tool.pylint]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
ignore-paths = [".venv", ".git", "__pypackages__", "tests/_temp", "tests"]
accept-no-param-doc = "no"
accept-no-raise-doc = "no"
accept-no-yields-doc = "no"
default-docstring-type = "google"

# ---- mypy ------------------------------------------------------------------------------------------------------------

[tool.mypy]
strict = true
